[gd_scene load_steps=6 format=3 uid="uid://c2rn6c4jc5dlf"]

[ext_resource type="Script" uid="uid://jtrtg026w4al" path="res://UI/chara_camp.gd" id="1_n0x3i"]
[ext_resource type="FontFile" uid="uid://dnslgqwusbs67" path="res://UI/Euphorigenic.otf" id="1_tajnv"]
[ext_resource type="Script" uid="uid://cslp2covnt48e" path="res://characters/animiddle.gd" id="2_n0x3i"]
[ext_resource type="Texture2D" uid="uid://dwuj0jfv5adyt" path="res://characters/charatexture/char tank.png" id="3_8qacs"]
[ext_resource type="Texture2D" uid="uid://barodb5cn3gov" path="res://UI/arrow.png" id="5_8qacs"]

[node name="CharaCamp" type="Node2D"]
script = ExtResource("1_n0x3i")

[node name="name" type="Label" parent="."]
visible = false
offset_left = -53.0
offset_top = -297.0
offset_right = -9.0
offset_bottom = -274.0
text = "name"

[node name="HBuffsContainer" type="HBoxContainer" parent="."]
offset_left = 19.0
offset_top = -249.0
offset_right = 59.0
offset_bottom = -230.0

[node name="HP" type="Label" parent="."]
z_index = 3
offset_left = -99.0
offset_top = -22.0
offset_right = -52.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("1_tajnv")
theme_override_font_sizes/font_size = 15

[node name="HPProgressBar" type="ProgressBar" parent="HP"]
modulate = Color(2, 0.8, 0, 1)
z_index = 3
layout_mode = 0
offset_left = 50.0
offset_top = 7.0
offset_right = 146.0
offset_bottom = 17.0
value = 100.0
show_percentage = false

[node name="Stress" type="Label" parent="."]
visible = false
z_index = 3
offset_left = -82.0
offset_top = -4.0
offset_right = -53.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("1_tajnv")
theme_override_font_sizes/font_size = 15
text = "Guilt:"

[node name="GuiltrogressBar" type="ProgressBar" parent="Stress"]
modulate = Color(1, 0.257036, 0, 1)
z_index = 3
layout_mode = 0
offset_left = 32.0
offset_top = 7.0
offset_right = 128.0
offset_bottom = 17.0
show_percentage = false

[node name="horny" type="Label" parent="."]
visible = false
z_index = 3
offset_left = -90.0
offset_top = 13.0
offset_right = -54.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_tajnv")
theme_override_font_sizes/font_size = 15
text = "Horny:"

[node name="HornyProgressBar" type="ProgressBar" parent="horny"]
modulate = Color(0.905484, 0, 1, 1)
layout_mode = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 135.0
offset_bottom = 17.0
show_percentage = false

[node name="pivot" type="Node2D" parent="."]
position = Vector2(37, 24)
scale = Vector2(1.2, 1.2)
script = ExtResource("2_n0x3i")
min_scale = 1.15
max_scale = 1.15
scalemini = 1.1
min_duration = 1.0
max_duration = 1.5

[node name="HerosTexture1" type="TextureRect" parent="pivot"]
offset_left = -133.0
offset_top = -229.0
offset_right = 38.0
offset_bottom = 2.0
scale = Vector2(1.2, 1)
mouse_filter = 2
texture = ExtResource("3_8qacs")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Selector" type="TextureRect" parent="pivot"]
self_modulate = Color(2, 2, 2, 0)
offset_left = -133.0
offset_top = -229.0
offset_right = 38.0
offset_bottom = 2.0
scale = Vector2(1.2, 1)
mouse_filter = 2
texture = ExtResource("3_8qacs")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(-14, -353)
scale = Vector2(0.38, 0.38)
texture = ExtResource("5_8qacs")
offset = Vector2(0, 112.61)
script = ExtResource("2_n0x3i")
min_scale = 0.38
max_scale = 0.38
scalemini = 0.3
min_duration = 0.5
max_duration = 0.5
